Vertical align bottom in solve

--- a/wordpress/build-files/scss/_home-solvvy.scss
+++ b/wordpress/build-files/scss/_home-solvvy.scss
@@ -64,7 +64,6 @@
 			.col-left,
 			.col-right {
 				width: 50%;
-				vertical-align: top;
 			}
 			.col-left {
 				padding-left: 15%;
